fixing overflow due to update in slider package

--- a/css/main.css
+++ b/css/main.css
@@ -646,6 +646,7 @@ body {
 .testimonials {
   position: relative;
   max-width: 100%;
+  overflow-x: scroll;
   -webkit-box-reflect: below 1px linear-gradient(transparent 70%, #0009);
 }
 
